fix(frontend): Update results panel structure/styling
I repaired the results panel structure/styling and removed unused commented out code. I also updated the scrollbar to a less ugly style. However, the scrollbar and other minor styling issues have not been completely resolved yet, so this will need updating in the future.

--- a/client/src/satellites/results.module.css
+++ b/client/src/satellites/results.module.css
@@ -1,42 +1,15 @@
-/* .results {
-  padding-top: 2rem;
-}
-
-.resultCount {
-  background-color: rgba(162, 170, 173, 0.15);
-  padding: 0.5rem;
-  margin: 0 0.5rem 0.5rem 0.5rem;
-}
-
-.scenes {
+.options {
   display: flex;
   flex-direction: column;
-  padding: 1rem;
+  justify-content: space-between;
+  height: 100%;
 }
-
-.scene {
-  display: flex;
-  align-items: center;
-  padding: 0.5rem;
-}
-
-.thumbnail {
-  width: 5rem;
-  height: auto;
-  border: 1px solid #fff;
-  margin: 0.5rem;
-}
-
-.metadata {
-} */
-
-/* ORginal above, new stuff below, just check it is right */
 
 .results {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  padding-top: 2rem;
+  padding-top: 1rem;
+  height: 100%;
 }
 
 .resultCount {
@@ -49,8 +22,27 @@
   display: flex;
   flex-direction: column;
   padding: 0.5rem;
+  margin-bottom: 1rem;
   height: 30rem;
   overflow-y: scroll;
+  border-radius: 0.25rem;
+  border: 1px solid rgba(162, 170, 173, 0.15);
+}
+
+.scenes::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 1rem;
+  background-color: #fff;
+}
+
+.scenes::-webkit-scrollbar {
+  width: 0.5rem;
+}
+
+.scenes::-webkit-scrollbar-thumb {
+  border-radius: 1rem;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: rgba(162, 170, 173, 0.15);
 }
 
 .scene {
@@ -58,7 +50,7 @@
   position: relative;
   flex-direction: column;
   align-items: center;
-  padding: 2rem 0;
+  padding: 1rem 0;
   margin: 0.5rem 0;
   border-radius: 0.5rem;
 }
@@ -67,26 +59,12 @@
   background-color: rgba(162, 170, 173, 0.15);
 }
 
-.infoBox {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 7rem;
-  width: 100%;
-  color: #000;
-  background-color: #fff;
-}
-
 .sceneContent,
 .sceneOptions {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
-}
-
-.sceneContent {
-  min-height: 7rem;
 }
 
 .thumbContainer {
@@ -111,7 +89,7 @@
 }
 
 .sceneOptions {
-  margin: 0.5rem 0;
+  margin: 0.5rem 0 1rem 0;
 }
 
 .moreInfo {
@@ -136,16 +114,23 @@
 
 .pinIcon {
   position: absolute;
-  top: 1rem;
-  right: 1rem;
+  top: 0.5rem;
+  right: 0.5rem;
   width: 1.25rem;
   cursor: pointer;
 }
 
+.freeProductContainer {
+  display: flex;
+  justify-content: flex-start;
+  width: 45%;
+}
+
 .freeProduct {
+  display: flex;
+  justify-content: flex-start;
   font-weight: bold;
   color: var(--primary-background-color);
-  width: 45%;
 }
 
 .scene button {
